# api.yml
@@ -64,6 +64,18 @@ paths:
         401:
           description: Bad auth
 
+  /auth_microservice:
+    post:
+      tags: [ Auth ]
+      operationId: app.auth_microservice
+      parameters:
+        - $ref: '#/parameters/auth_body_microservice'
+      responses:
+        200:
+          description: Return jwt token
+        401:
+          description: Bad auth
+
 parameters:
   test1_id:
     name: test1_id
@@ -98,6 +110,16 @@ parameters:
         username:
           type: string
         password:
+          type: string
+  auth_body_microservice:
+    name: auth_body_microservice
+    description: Login and get token for microservices
+    in: body
+    schema:
+      required:
+        - apikey
+      properties:
+        apikey:
           type: string
 
   person_name:
